# netx90_app_blinky_example

./: .cproject  .lock-waf_linux2_build  .project  CMakeLists.txt  hboot_image_compiler.py  nxstudio.ini  wscript
CMSIS/: wscript
HWC/: hardware_config.xml
Include/: gpio.h  main.h
Linker/: netx90_app_iflash.ld  netx90_app_intram.ld  netx90_app_sdram.ld
WAF/: hilscher_dist.py  hilscher_doc.py  hilscher_firmware.py  hilscher_netx.py  hilscher_toolchains.py
cmake/: netx90_gccarmemb.cmake
netx_regdefs/netx90/: mmio_config.c
src/: gpio.c  main.c  netx90_app_header.c  wscript
